--- a/views/login.html
+++ b/views/login.html
@@ -1,3 +1,5 @@
 <input type = "text" id = "username" name = "name">
 <input type = "password" id = "password" name = "password">
 <button id = "submit">submit</button>
+<br/>
+<button id = "create">create user?</button>
