--- a/css/cube.css
+++ b/css/cube.css
@@ -3,12 +3,12 @@
   top:20px;
   width: 600px;
   height: 600px;
-  position: relative;
+  position: fixed;
   border: 1px solid #CCC;
-  -webkit-perspective: 10000px;
-     -moz-perspective: 10000px;
-       -o-perspective: 10000px;
-          perspective: 10000px;
+  -webkit-perspective: 700px;
+     -moz-perspective: 700px;
+       -o-perspective: 700px;
+          perspective: 700px;
 }
 
 #cube {
