--- a/views/login.html
+++ b/views/login.html
@@ -1,5 +1,3 @@
-<input type = "text" id = "username" name = "name">
-<input type = "password" id = "password" name = "password">
-<button id = "submit">submit</button>
-<br/>
-<button id = "create">create user?</button>
+<label for = "username">username:</label><input type = "text" id = "username" name = "name"><br/>
+<label for = "username">password:</label><input type = "password" id = "password" name = "password"><br/>
+<button id = "submit">login</button><button id = "create">create</button>
