--- a/css/main.css
+++ b/css/main.css
@@ -2,4 +2,12 @@
 width:100%;
 position:fixed;
 bottom:0;
+text-align:center;
+}
+
+#message{
+width:100%;
+position:fixed;
+top:0;
+text-align:center;
 }
