--- a/css/cube.css
+++ b/css/cube.css
@@ -1,9 +1,11 @@
+
+
 .container {
   top:25px;
   width: 600px;
   height: 600px;
   position: fixed;
-  border: 1px solid #CCC;
+  xborder: 1px solid #CCC;
   -webkit-perspective: 700px;
      -moz-perspective: 700px;
        -o-perspective: 700px;
@@ -35,7 +37,7 @@ margin:0;
 
 }
 
-#cube figure {
+#cube figure .nothing{
   -webkit-backface-visibility: hidden;
      -moz-backface-visibility: hidden;
        -o-backface-visibility: hidden;
@@ -102,34 +104,59 @@ margin:0;
      -moz-transform: translateZ( -300px );
        -o-transform: translateZ( -300px );
           transform: translateZ( -300px );
+  -webkit-animation: show-front 15s;
+  -webkit-animation-iteration-count: infinite;
+  -webkit-animation-delay:1s;
+  -webkit-animation-timing-function: linear;
 }
 #cube.show-back {
   -webkit-transform: translateZ( -300px ) rotateX( -180deg );
      -moz-transform: translateZ( -300px ) rotateX( -180deg );
        -o-transform: translateZ( -300px ) rotateX( -180deg );
           transform: translateZ( -300px ) rotateX( -180deg );
+  -webkit-animation: show-back 15s;
+  -webkit-animation-iteration-count: infinite;
+  -webkit-animation-delay:1s;
+  -webkit-animation-timing-function: linear;
 }
 #cube.show-right {
   -webkit-transform: translateZ( -300px ) rotateY(  -90deg );
      -moz-transform: translateZ( -300px ) rotateY(  -90deg );
        -o-transform: translateZ( -300px ) rotateY(  -90deg );
           transform: translateZ( -300px ) rotateY(  -90deg );
+  -webkit-animation: show-right 15s;
+  -webkit-animation-iteration-count: infinite;
+  -webkit-animation-delay:1s;
+  -webkit-animation-timing-function: linear;
 }
 #cube.show-left {
   -webkit-transform: translateZ( -300px ) rotateY(   90deg );
      -moz-transform: translateZ( -300px ) rotateY(   90deg );
        -o-transform: translateZ( -300px ) rotateY(   90deg );
           transform: translateZ( -300px ) rotateY(   90deg );
+  -webkit-animation: show-left 15s;
+  -webkit-animation-iteration-count: infinite;
+  -webkit-animation-delay:1s;
+  -webkit-animation-timing-function: linear;
 }
 #cube.show-top {
   -webkit-transform: translateZ( -300px ) rotateX(  -90deg );
      -moz-transform: translateZ( -300px ) rotateX(  -90deg );
        -o-transform: translateZ( -300px ) rotateX(  -90deg );
           transform: translateZ( -300px ) rotateX(  -90deg );
+  -webkit-animation: show-top 15s;
+  -webkit-animation-iteration-count: infinite;
+  -webkit-animation-delay:1s;
+  -webkit-animation-timing-function: linear;
 }
 #cube.show-bottom {
   -webkit-transform: translateZ( -300px ) rotateX(   90deg );
      -moz-transform: translateZ( -300px ) rotateX(   90deg );
        -o-transform: translateZ( -300px ) rotateX(   90deg );
           transform: translateZ( -300px ) rotateX(   90deg );
+  -webkit-animation: show-bottom 15s;
+  -webkit-animation-iteration-count: infinite;
+  -webkit-animation-delay:1s;
+  -webkit-animation-timing-function: linear;
+
 }
