--- a/views/login.html
+++ b/views/login.html
@@ -1,3 +1,7 @@
-<label for = "username">username:</label><input type = "text" id = "username" name = "name"><br/>
-<label for = "username">password:</label><input type = "password" id = "password" name = "password"><br/>
-<button id = "submit">login</button><button id = "create">create</button>
+<div class = "bubble">
+    <label for = "username">username:</label><input type = "text" id = "username" name = "name"><br/>
+    <label for = "username">password:</label><input type = "password" id = "password" name = "password"><br/>
+    <button id = "submit">login</button><button id = "create">create</button>
+</div>
+<div class = "bubble">
+    <p>welcome to Global Maptrax!<br/>please enter a unique user name/password combination. if you have not visited the site before, click "create". otherwise, click "log in". be sure to update your status!</p>
