--- a/views/logout.html
+++ b/views/logout.html
@@ -1,6 +1,3 @@
 <style>
-    #logoutImage{
-        width:100%;
-    }
 </style>
-<img id = "logoutImage" src = "media/logout.jpg"/>
+<h1>see you soon!</h1>
