--- a/views/message.html
+++ b/views/message.html
@@ -1,1 +1,4 @@
-<label for = "messageInput">change your status:</label><input id = "messageInput" type = "text"><button id = "messageButton">update!</button>
+<div class = "bubble">
+    <label for = "messageInput">change your status:</label><input id = "messageInput" type = "text">
+    <button id = "messageButton">update!</button>
+</div>
