--- a/views/whoshere.html
+++ b/views/whoshere.html
@@ -2,8 +2,8 @@
 <style type="text/css">
   html { height: 100%; width : 100%; position:fixed}
   body { height: 100%; width:100%; margin: 0; padding: 0 }
-  #map_canvas { height: 100%; width:100%; position:fixed; clear:both}
+  #map_canvas {}
   #header{height:30px;text-align:center;}
 </style>
 
-<div id="map_canvas" style="width:100%; height:100%"></div>
+<div id="map_canvas" style="width:590px; height:590px;"></div>
