--- a/css/main.css
+++ b/css/main.css
@@ -1,15 +1,20 @@
-#footer{
+
+#messageContainer{
 width:100%;
+height:50px;
 position:fixed;
-bottom:0;
+top:0;
 text-align:center;
 }
 
 #message{
-width:100%;
-position:fixed;
-top:0;
-text-align:center;
+position:relative;
+display:block;
+width:50%;
+left:25%;
+box-shadow: 5px 5px 5px rgba(0,0,0,0.7);
+color:white;
+background: rgba(0,0,0,.7);
 }
 
 #canvas{
@@ -18,3 +23,42 @@ left:0;
 z-index:-1;
 position:fixed;
 }
+
+.bubble{
+-webkit-transform: translateZ( -450px );
+     -moz-transform: translateZ( -450px );
+       -o-transform: translateZ( -450px );
+          transform: translateZ( -450px );
+xbox-shadow : 5px 5px rgba(0,0,0,.7);
+margin:15px;
+background-color:#66A3D2;
+padding:15px;
+
+}
+#footer{
+width:50%;
+left:25%;
+position:fixed;
+bottom:0;
+text-align:center;
+
+box-shadow: 5px 5px 5px rgba(0,0,0,0.7);
+color:white;
+background: rgba(0,0,0,.7);
+}
+
+
+.button{
+display:inline-block;
+position:relative;
+margin: 0 auto;
+margin-left:5px;
+margin-right:5px;
+padding:5px;
+border-top-left-radius:5px;
+border-top-right-radius:5px;
+}
+.button:hover{
+box-shadow: inset 0px -1px -1px rgba(0,0,0,0.7);
+}
+		
