--- a/css/cubeanimations.css
+++ b/css/cubeanimations.css
@@ -102,23 +102,23 @@
 {
 
     0% {
-        -webkit-transform: rotateX( -90deg ) rotateY( 0deg ) translateZ( -300px );
+        -webkit-transform: rotateX( -90deg ) rotateY( 0deg ) translateY( 300px );
     }
     
     12% {
-        -webkit-transform: rotateX( -89deg ) rotateY( -1deg ) translateZ( -300px );
+        -webkit-transform: rotateX( -89deg ) rotateY( -1deg ) translateY( 300px );
     }
     
     37% {
-        -webkit-transform: rotateX( -89deg ) rotateY( 1deg ) translateZ( -300px );
+        -webkit-transform: rotateX( -89deg ) rotateY( 1deg ) translateY( 300px );
     }
 
     62% {
-        -webkit-transform: rotateX( -91deg ) rotateY( -1deg ) translateZ( -300px );
+        -webkit-transform: rotateX( -91deg ) rotateY( -1deg ) translateY( 300px );
     }
     
     87% {
-        -webkit-transform: rotateX( -91deg ) rotateY( 1deg ) translateZ( -300px );
+        -webkit-transform: rotateX( -91deg ) rotateY( 1deg ) translateY( 300px );
     }
 
 }
